@startuml PasswordStateMachine
title Complex Password Detector State Diagram

state "CollectingState" as Collecting
state "EnforcingState" as Enforcing
state "Accept" as Accept
state "Reject" as Reject

state "MissingUpperAndSpecial" as MissingUpperAndSpecial
state "MissingUpperWithTrailingSpecial" as MissingUpperWithTrailingSpecial
state "MissingUpperNoTrailingSpecial" as MissingUpperNoTrailingSpecial
state "MissingSpecial" as MissingSpecial
state "UpperAndSpecialTrailing" as UpperAndSpecialTrailing
state "UpperAndSpecialReady" as UpperAndSpecialReady

[*] --> Collecting

Collecting --> Collecting : [token and len < 8] / advance complexity state
Collecting --> Enforcing : [token and len >= 8] / advance complexity state
Enforcing --> Enforcing : [token] / advance complexity state

Collecting --> Reject : [end]
Enforcing --> Accept : [end and complexity is UpperAndSpecialReady]
Enforcing --> Reject : [end and complexity is not UpperAndSpecialReady]

[*] --> MissingUpperAndSpecial
MissingUpperAndSpecial --> MissingUpperAndSpecial : [non-uppercase and non-special]
MissingUpperAndSpecial --> MissingSpecial : [uppercase]
MissingUpperAndSpecial --> MissingUpperWithTrailingSpecial : [special]

MissingUpperWithTrailingSpecial --> MissingUpperWithTrailingSpecial : [special and non-uppercase]
MissingUpperWithTrailingSpecial --> MissingUpperNoTrailingSpecial : [non-special and non-uppercase]
MissingUpperWithTrailingSpecial --> UpperAndSpecialTrailing : [uppercase and special]
MissingUpperWithTrailingSpecial --> UpperAndSpecialReady : [uppercase and non-special]

MissingUpperNoTrailingSpecial --> MissingUpperNoTrailingSpecial : [non-special and non-uppercase]
MissingUpperNoTrailingSpecial --> MissingUpperWithTrailingSpecial : [special and non-uppercase]
MissingUpperNoTrailingSpecial --> UpperAndSpecialTrailing : [uppercase and special]
MissingUpperNoTrailingSpecial --> UpperAndSpecialReady : [uppercase and non-special]

MissingSpecial --> MissingSpecial : [non-special]
MissingSpecial --> UpperAndSpecialTrailing : [special]

UpperAndSpecialTrailing --> UpperAndSpecialTrailing : [special]
UpperAndSpecialTrailing --> UpperAndSpecialReady : [non-special]

UpperAndSpecialReady --> UpperAndSpecialReady : [non-special]
UpperAndSpecialReady --> UpperAndSpecialTrailing : [special]

Accept --> [*]
Reject --> [*]

note right of Collecting
Length tracking and complexity tracking are state-owned.
Acceptance is driven by the active complexity state at end-of-input.
end note
@enduml
